NEXT-22675 - add normal component rendering to locations

--- a/src/Administration/Resources/app/administration/src/app/component/extension-api/sw-iframe-renderer/sw-iframe-renderer.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/extension-api/sw-iframe-renderer/sw-iframe-renderer.html.twig
@@ -1,5 +1,9 @@
 <div>
-    <template v-if="extensionIsApp">
+    <template v-if="componentName">
+        <component :is="componentName"/>
+    </template>
+
+    <template v-else-if="extensionIsApp">
         <iframe
             v-if="signedIframeSrc"
             ref="iframe"
