NEXT-22279 - Color picker should be displayed once

--- a/src/Administration/Resources/app/administration/src/app/component/form/sw-colorpicker/sw-colorpicker.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/sw-colorpicker/sw-colorpicker.html.twig
@@ -20,6 +20,7 @@
             >
                 <div
                     class="sw-colorpicker__previewColor"
+                    :class="{active:visible}"
                     :style="{ background: previewColorValue }"
                 ></div>
                 <div
