NEXT-22609 - Adapt api for address formatting

--- a/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-multi-snippet-drag-and-drop/sw-multi-snippet-drag-and-drop.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-multi-snippet-drag-and-drop/sw-multi-snippet-drag-and-drop.html.twig
@@ -39,9 +39,9 @@
                             <span class="sw-select-selection-list__item">
                                 <slot
                                     name="label-property"
-                                    v-bind="{ item: snippet, index, labelProperty, valueProperty }"
+                                    v-bind="{ item: snippet, index, labelProperty, valueProperty, getLabelProperty }"
                                 >
-                                    {{ snippet[labelProperty] }}
+                                    {{ getLabelProperty(snippet[labelProperty]) }}
                                 </slot>
                             </span>
                         </sw-label>
