--- a/src/Administration/Resources/app/administration/src/app/component/base/sw-address/sw-address.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/base/sw-address/sw-address.html.twig
@@ -25,16 +25,17 @@
     <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
     {% block sw_address_formatting %}
     <div
-        v-if="formattingAddress"
+        v-if="feature.isActive('v6.5.0.0')"
         class="sw-address__formatting"
         v-html="displayFormattingAddress"
     ></div>
     {% endblock %}
 
+    {# @deprecated tag:v6.5.0 - Block will be removed completely #}
     <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
     {% block sw_address_body %}
     <div
-        v-if="!formattingAddress"
+        v-if="!feature.isActive('v6.5.0.0')"
         class="sw-address__body"
     >
         <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
