--- a/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-user-card/sw-order-user-card.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-user-card/sw-order-user-card.html.twig
@@ -229,7 +229,10 @@
                         v-else-if="hasDeliveries"
                         @click="$emit('onEditDeliveryAddress',$event)"
                     >
-                        <sw-address :address="delivery.shippingOrderAddress" />
+                        <sw-address
+                            :address="delivery.shippingOrderAddress"
+                            :formatting-address="formattingAddress"
+                        />
                     </dd>
 
                     <dd v-else>
