--- a/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-settings-country-address-handling/sw-settings-country-address-handling.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-settings-country-address-handling/sw-settings-country-address-handling.html.twig
@@ -1,13 +1,10 @@
-{% block sw_settings_country_address_handling %}
 <div class="sw-settings-country-address-handling">
-    {% block sw_settings_country_address_handling_options_card %}
     <sw-card
         position-identifier="sw-settings-country-address-handling-options"
         :title="$tc('sw-settings-country.detail.titleOptions')"
         :is-loading="isLoading"
     >
         <sw-container class="sw-settings-country-address-handling__options-container">
-            {% block sw_settings_country_address_handling_options_card_field_force_state_on_registration %}
             <sw-switch-field
                 v-model="country.forceStateInRegistration"
                 class="sw-settings-country-address-handling__option-items"
@@ -15,9 +12,7 @@
                 :disabled="!acl.can('country.editor')"
                 :label="$tc('sw-settings-country.detail.labelForceStateInRegistration')"
             />
-            {% endblock %}
 
-            {% block sw_settings_country_address_handling_options_card_field_postal_code_required %}
             <sw-switch-field
                 v-model="country.postalCodeRequired"
                 class="sw-settings-country-address-handling__option-items"
@@ -25,9 +20,7 @@
                 :disabled="!acl.can('country.editor')"
                 :label="$tc('sw-settings-country.detail.labelPostalCodeRequired')"
             />
-            {% endblock %}
 
-            {% block sw_settings_country_address_handling_options_card_field_check_postal_code_pattern %}
             <sw-switch-field
                 v-model="country.checkPostalCodePattern"
                 class="sw-settings-country-address-handling__option-items"
@@ -36,21 +29,16 @@
                 :label="$tc('sw-settings-country.detail.labelCheckPostalCodePattern')"
                 :help-text="$tc('sw-settings-country.detail.helpTextCheckPostalCodePattern')"
             />
-            {% endblock %}
 
-            {% block sw_settings_country_address_handling_options_card_field_advanced_postal_code %}
             <div class="sw-settings-country-address-handling__option-items advanced-postal-code">
-                {% block sw_settings_country_address_handling_options_card_field_check_advanced_postal_code_pattern %}
                 <sw-switch-field
                     v-model="country.checkAdvancedPostalCodePattern"
                     class="sw-settings-country-address-handling__option-items"
                     :disabled="!acl.can('country.editor') || !country.checkPostalCodePattern"
                     :label="$tc('sw-settings-country.detail.labelCheckAdvancedPostalCodePattern')"
-                    :help-text="$tc('sw-settings-country.detail.helpTextAdvancedPostalCodePattern')"
+                    :help-text="$tc('sw-settings-country.detail.helpTextAdvancedPostalCodePattern', 0, {5: '{5}', 4: '{4}', 2: '{2}'})"
                 />
-                {% endblock %}
 
-                {% block  sw_settings_country_address_handling_options_card_field_advanced_postal_code_pattern %}
                 <sw-text-field
                     v-model="country.advancedPostalCodePattern"
                     class="sw-settings-country-address-handling__text-field"
@@ -58,30 +46,26 @@
                     :disabled="!acl.can('country.editor')"
                     :placeholder="$tc('sw-settings-country.detail.placeholderAdvancedPostalCodePattern')"
                 />
-                {% endblock %}
             </div>
-            {% endblock %}
         </sw-container>
     </sw-card>
-    {% endblock %}
 
-    {% block sw_settings_country_address_handling_formatting_card %}
     <sw-card
         position-identifier="sw-settings-country-address-handling-formatting"
         :title="$tc('sw-settings-country.detail.titleFormatting')"
         :is-loading="isLoading"
     >
         <sw-container class="sw-settings-country-address-handling__options-container">
-            {% block sw_settings_country_address_handling_drag_drop %}
             <div class="sw-settings-country-address-handling__address-markup">
                 <sw-multi-snippet-drag-and-drop
-                    v-for="(snippet, index) in advancedAddressFormat"
+                    v-for="(snippet, index) in addressFormat"
                     :key="index"
                     v-droppable="{ data: { snippet, index }, dragGroup: 'sw-multi-snippet' }"
                     v-draggable="{ ...dragConf, data: { snippet, index }}"
                     :value="snippet"
                     :line-position="index"
                     :disabled="isDisabled"
+                    :get-label-property="getLabelProperty"
                     @change="change"
                     @drag-end="onDragEnd"
                     @location-move="moveToLocation"
@@ -89,17 +73,12 @@
                     @open-snippet-modal="openSnippetModal"
                 />
             </div>
-            {% endblock %}
 
-            {% block sw_settings_country_address_handling_preview %}
             <div class="sw-settings-country-address-handling__address-preview">
-                {% block sw_settings_country_address_handling_address_preview_title %}
                 <div class="sw-card__title">
                     {{ $tc('sw-settings-country.detail.previewTitle') }}
                 </div>
-                {% endblock %}
 
-                {% block sw_settings_country_address_handling_preview_customer_selection %}
                 <sw-entity-single-select
                     v-model="customerId"
                     class="sw-settings-country-address-handling__customer-select"
@@ -111,16 +90,9 @@
                     :label-callback="customerLabel"
                     @change="onChangeCustomer"
                 />
-                {% endblock %}
 
-                {% block sw_settings_country_address_handling_rendering %}
-                <sw-settings-country-preview-template
-                    :preview-data="previewData"
-                    :advanced-address-format="advancedAddressFormat"
-                />
-                {% endblock %}
+                <sw-settings-country-preview-template :formatting-address="formattingAddress" />
 
-                {% block sw_settings_country_address_handling_preview_reset_button %}
                 <sw-button
                     class="sw-settings-country-address-handling__button-reset"
                     variant="ghost-danger"
@@ -128,22 +100,17 @@
                 >
                     {{ $tc('sw-settings-country.detail.buttonResetMarkup') }}
                 </sw-button>
-                {% endblock %}
             </div>
-            {% endblock %}
         </sw-container>
     </sw-card>
-    {% endblock %}
 
-    {% block sw_settings_country_address_handling_new_snippet_modal %}
     <sw-settings-country-new-snippet-modal
         v-if="isOpenModal"
         :selections="snippets"
         :current-position="currentPosition"
-        :advanced-address-format="advancedAddressFormat"
+        :address-format="addressFormat"
+        :get-label-property="getLabelProperty"
         @change="change"
         @modal-close="onCloseModal"
     />
-    {% endblock %}
 </div>
-{% endblock %}
