--- a/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-settings-country-preview-template/sw-settings-country-preview-template.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-country/component/sw-settings-country-preview-template/sw-settings-country-preview-template.html.twig
@@ -1,12 +1,3 @@
-{% block sw_settings_country_preview_template %}
 <div class="sw-settings-country-preview-template">
-    {% block sw_settings_country_preview_template_item %}
-    <span
-        v-for="(row, index) in displayFormattingAddress"
-        :key="index"
-    >
-        {{ row }}
-    </span>
-    {% endblock %}
+    <div v-html="displayFormattingAddress"></div>
 </div>
-{% endblock %}
