--- a/src/Administration/Resources/app/administration/src/module/sw-settings-country/page/sw-settings-country-detail/sw-settings-country-detail.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-country/page/sw-settings-country-detail/sw-settings-country-detail.html.twig
@@ -161,8 +161,10 @@
                 </sw-tabs-item>
                 {% endblock %}
 
+                <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
                 {% block sw_setting_country_tabs_address_handling %}
                 <sw-tabs-item
+                    v-if="feature.isActive('v6.5.0.0')"
                     v-bind="$props"
                     class="sw-settings-country__address-handling-tab"
                     :route="{ name: isNewCountry ? 'sw.settings.country.create.address-handling' : 'sw.settings.country.detail.address-handling' }"
@@ -171,6 +173,7 @@
                 </sw-tabs-item>
                 {% endblock %}
 
+                <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
                 {% block sw_setting_country_tabs_extension %}{% endblock %}
             </sw-tabs>
             {% endblock %}
