--- a/src/Administration/Resources/app/administration/src/app/component/form/field-base/sw-field-error/sw-field-error.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/field-base/sw-field-error/sw-field-error.html.twig
@@ -4,6 +4,10 @@
     v-if="!!error"
     class="sw-field__error"
 >
+    <sw-icon
+        name="solid-exclamation-circle"
+        size="12"
+    />
     {{ errorMessage }}
 </div>
 {% endblock %}
