--- a/src/Administration/Resources/app/administration/src/app/component/form/sw-checkbox-field/sw-checkbox-field.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/form/sw-checkbox-field/sw-checkbox-field.scss
@@ -115,6 +115,10 @@ $sw-field-color-inherited: $color-module-purple-900;
                 border: 1px solid $sw-field-color-error;
             }
         }
+
+        .sw-field__label {
+            color: $color-crimson-500;
+        }
     }
 
     &.is--inherited {
