--- a/src/Administration/Resources/app/administration/src/app/component/form/sw-text-editor/sw-text-editor.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/sw-text-editor/sw-text-editor.html.twig
@@ -107,5 +107,10 @@
         {% endblock %}
     </div>
     {% endblock %}
+
+    <sw-field-error
+        v-if="error"
+        :error="error"
+    />
 </div>
 {% endblock %}
