--- a/src/Administration/Resources/app/administration/src/app/component/form/field-base/sw-base-field/sw-base-field.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/form/field-base/sw-base-field/sw-base-field.scss
@@ -48,6 +48,10 @@
 
     &.has--error {
         margin-bottom: 12px;
+
+        .sw-field__label {
+            color: $color-crimson-500;
+        }
     }
 
     &__hint {
