--- a/src/Administration/Resources/app/administration/src/app/component/form/field-base/sw-block-field/sw-block-field.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/form/field-base/sw-block-field/sw-block-field.scss
@@ -57,7 +57,23 @@ $sw-field-transition: border-color 0.3s ease-out, background 0.3s ease;
 
     &.has--error {
         .sw-block-field__block {
+            background: $color-crimson-50;
             border-color: $color-crimson-500;
+
+            input,
+            textarea,
+            select {
+                background: $color-crimson-50;
+            }
+        }
+
+        .sw-field__addition {
+            border-left: 1px solid $color-crimson-500;
+
+            &.is--prefix {
+                border-left: unset;
+                border-right: 1px solid $color-crimson-500;
+            }
         }
     }
 
