--- a/src/Administration/Resources/app/administration/src/app/component/form/field-base/sw-field-error/sw-field-error.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/form/field-base/sw-field-error/sw-field-error.scss
@@ -1,6 +1,9 @@
 @import "~scss/variables";
 
 .sw-field__error {
+    display: flex;
+    align-items: center;
+    gap: 4px;
     margin-top: 4px;
     font-size: $font-size-extra-small;
     line-height: 1.25;
