--- a/src/Administration/Resources/app/administration/src/app/component/form/sw-radio-field/sw-radio-field.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/sw-radio-field/sw-radio-field.html.twig
@@ -34,7 +34,11 @@
                 </div>
 
                 <!-- eslint-disable-next-line vuejs-accessibility/label-has-for -->
-                <label :for="`${identification}-${index}`">
+                <label
+                    class="sw-field__radio-option-label"
+                    :class="{'error--selection': !!error && currentIndex === index}"
+                    :for="`${identification}-${index}`"
+                >
                     <span>{{ option.name }}</span>
                     <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
                     {% block sw_radio_field_help_text %}
