NEXT-16672 - Add draft mode in Order UX

--- a/src/Administration/Resources/app/administration/src/module/sw-cms/page/sw-cms-list/sw-cms-list.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-cms/page/sw-cms-list/sw-cms-list.html.twig
@@ -258,7 +258,8 @@
                                 <sw-skeleton
                                     v-for="index in 9"
                                     :key="`cms-list-skeleton-${index}`"
-                                    variant="gallery" />
+                                    variant="gallery"
+                                />
                             </template>
                         </div>
                         {% endblock %}
