--- a/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-create-initial-modal/sw-order-create-initial-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-create-initial-modal/sw-order-create-initial-modal.html.twig
@@ -119,6 +119,7 @@
                         :disabled="!customer"
                         :promotion-codes="promotionCodes"
                         :disabled-auto-promotions="disabledAutoPromotions"
+                        :context="context"
                         @promotions-change="updatePromotion"
                         @auto-promotions-toggle="updateAutoPromotionsToggle"
                     />
