--- a/src/Administration/Resources/app/administration/src/module/sw-order/view/sw-order-detail-general/sw-order-detail-general.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/view/sw-order-detail-general/sw-order-detail-general.html.twig
@@ -89,11 +89,7 @@
                         </dd>
                     </template>
 
-                    <!-- eslint-disable vue/no-use-v-if-with-v-for -->
-                    <template
-                        v-for="(delivery, index) in deliveryDiscounts"
-                        v-if="deliveryDiscounts"
-                    >
+                    <template v-for="(delivery, index) in deliveryDiscounts">
                         <dt :key="`delivery-discount-dt-${index}`">
                             {{ $tc('sw-order.detailBase.discountLabelShippingCosts') }}
                         </dt>
