--- a/src/Administration/Resources/app/administration/src/module/sw-promotion/view/sw-promotion-detail-discounts/sw-promotion-detail-discounts.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-promotion/view/sw-promotion-detail-discounts/sw-promotion-detail-discounts.html.twig
@@ -3,8 +3,10 @@
 <div class="sw-promotion-detail-discounts">
     <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
     {% block sw_promotion_detail_discounts_card_add %}
-    <div class="promotion-detail-discounts__action_add"
-         position-identifier="sw-promotion-detail-discounts">
+    <div
+        class="promotion-detail-discounts__action_add"
+        position-identifier="sw-promotion-detail-discounts"
+    >
         <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
         {% block sw_promotion_detail_discounts_actions_add %}
         <sw-button
