--- a/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-create-options/sw-order-create-options.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-create-options/sw-order-create-options.html.twig
@@ -116,64 +116,15 @@
 
         <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
         {% block sw_order_create_options_billing_address %}
-        <sw-single-select
-            ref="billingAddress"
-            v-model="billingAddressId"
+        <sw-order-customer-address-select
+            v-model="context.billingAddressId"
             class="sw-order-create-options__billing-address"
-            value-property="id"
-            required
-            disable-search-function
-            :is-loading="isLoadingBillingAddress"
-            :options="customerAddresses"
             :label="$tc('sw-order.createBase.labelBillingAddress')"
             :placeholder="$tc('sw-order.createBase.placeholderBillingAddress')"
-            @search="searchBillingAddress"
-            @change="changeBillingAddress"
-        >
-            <template #before-item-list>
-                <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
-                {% block sw_order_create_options_select_same_shipping_address %}
-                <ul
-                    v-if="shippingAddressId !== billingAddressId"
-                    class="sw-select-result__item-list"
-                >
-                    <!-- eslint-disable-next-line vuejs-accessibility/click-events-have-key-events -->
-                    <li
-                        class="sw-select-result sw-select-result__option-same-address"
-                        @click="setSameAddress('shippingAddressId', 'billingAddress')"
-                    >
-                        {{ $tc('sw-order.initialModal.options.textSameAsShippingAddress') }}
-                    </li>
-                </ul>
-            {% endblock %}
-            </template>
-
-            <template #selection-label-property="{ item }">
-                {{ getCustomerAddress(item) }}
-            </template>
-
-            <template #result-item="{ item, index, searchTerm, highlightSearchTerm, isSelected, setValue, getKey }">
-                <li
-                    is="sw-select-result"
-                    :selected="isSelected(item)"
-                    v-bind="{ item, index }"
-                    @item-select="setValue"
-                >
-                    <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
-                    {% block sw_order_create_options_select_billing_address_result_label %}
-                    <sw-highlight-text
-                        v-if="highlightSearchTerm && !isSelected(item)"
-                        :text="getCustomerAddress(item)"
-                        :search-term="searchTerm"
-                    />
-
-                    <template v-else>
-                        {{ getCustomerAddress(item) }}
-                    </template>
-                    {% endblock %}
-                </li>
-            </template>
-        </sw-single-select>
+            :same-address-label="$tc('sw-order.initialModal.options.textSameAsShippingAddress')"
+            :same-address-value="context.shippingAddressId"
+            :customer="customer"
+        />
         {% endblock %}
 
         <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
@@ -218,63 +169,15 @@
 
         <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
         {% block sw_order_create_options_shipping_address %}
-        <sw-single-select
-            ref="shippingAddress"
-            v-model="shippingAddressId"
+        <sw-order-customer-address-select
+            v-model="context.shippingAddressId"
             class="sw-order-create-options__shipping-address"
-            value-property="id"
-            disable-search-function
-            :is-loading="isLoadingShippingAddress"
-            :options="customerAddresses"
             :label="$tc('sw-order.createBase.labelShippingAddress')"
             :placeholder="$tc('sw-order.createBase.placeholderShippingAddress')"
-            @change="changeShippingAddress"
-            @search="searchShippingAddress"
-        >
-            <template #before-item-list>
-                <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
-                {% block sw_order_create_options_select_same_billing_address %}
-                <ul
-                    v-if="shippingAddressId !== billingAddressId"
-                    class="sw-select-result__item-list"
-                >
-                    <!-- eslint-disable-next-line vuejs-accessibility/click-events-have-key-events -->
-                    <li
-                        class="sw-select-result sw-select-result__option-same-address"
-                        @click="setSameAddress('billingAddressId', 'shippingAddress')"
-                    >
-                        {{ $tc('sw-order.initialModal.options.textSameAsBillingAddress') }}
-                    </li>
-                </ul>
-            {% endblock %}
-            </template>
-
-            <template #selection-label-property="{ item }">
-                {{ getCustomerAddress(item) }}
-            </template>
-
-            <template #result-item="{ item, index, searchTerm, highlightSearchTerm, isSelected, setValue, getKey }">
-                <li
-                    is="sw-select-result"
-                    :selected="isSelected(item)"
-                    v-bind="{ item, index }"
-                    @item-select="setValue"
-                >
-                    <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
-                    {% block sw_order_create_options_select_shipping_address_result_label %}
-                    <sw-highlight-text
-                        v-if="highlightSearchTerm && !isSelected(item)"
-                        :text="getCustomerAddress(item)"
-                        :search-term="searchTerm"
-                    />
-
-                    <template v-else>
-                        {{ getCustomerAddress(item) }}
-                    </template>
-                    {% endblock %}
-                </li>
-            </template>
-        </sw-single-select>
+            :same-address-label="$tc('sw-order.initialModal.options.textSameAsBillingAddress')"
+            :same-address-value="context.billingAddressId"
+            :customer="customer"
+        />
         {% endblock %}
     </sw-container>
     {% endblock %}
