NEXT-21152 - Implement error handling to promotion module

--- a/src/Administration/Resources/app/administration/src/module/sw-promotion-v2/page/sw-promotion-v2-detail/sw-promotion-v2-detail.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-promotion-v2/page/sw-promotion-v2-detail/sw-promotion-v2-detail.html.twig
@@ -81,6 +81,7 @@
                 <sw-tabs-item
                     :route="{ name: 'sw.promotion.v2.detail.base', params: { id: $route.params.id } }"
                     :title="$tc('sw-promotion-v2.detail.tabs.tabGeneral')"
+                    :has-error="swPromotionV2DetailBaseError"
                     :disabled="!promotionId"
                 >
                     {{ $tc('sw-promotion-v2.detail.tabs.tabGeneral') }}
