NEXT-22489 - Missing border for custom fields with Modifiable via Store API switch field

--- a/src/Administration/Resources/app/administration/src/module/sw-settings-custom-field/component/sw-custom-field-detail/sw-custom-field-detail.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-custom-field/component/sw-custom-field-detail/sw-custom-field-detail.html.twig
@@ -76,6 +76,7 @@
         <sw-field
             v-model="currentCustomField.allowCustomerWrite"
             type="switch"
+            bordered
             :help-text="$tc('sw-settings-custom-field.customField.detail.tooltipAllowCustomerWrite')"
             class="sw-custom-field-detail__allow-customer-write"
             :label="$tc('sw-settings-custom-field.customField.detail.labelAllowCustomerWrite')"
