--- a/src/Administration/Resources/app/administration/src/module/sw-settings-search/view/sw-settings-search-view-live-search/sw-settings-search-view-live-search.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-search/view/sw-settings-search-view-live-search/sw-settings-search-view-live-search.html.twig
@@ -4,6 +4,7 @@
     <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
     {% block sw_settings_search_view_live_search_search_index_card %}
     <sw-settings-search-search-index
+        v-if="!isElasticsearchEnabled"
         :is-loading="isLoading"
         v-on="$listeners"
     />
