NEXT-22998 - Improve error handling settings salutation

--- a/src/Administration/Resources/app/administration/src/module/sw-settings-salutation/page/sw-settings-salutation-detail/sw-settings-salutation-detail.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-salutation/page/sw-settings-salutation-detail/sw-settings-salutation-detail.html.twig
@@ -93,7 +93,7 @@
                             :label="$tc('sw-settings-salutation.detail.fieldSalutationKeyLabel')"
                             :placeholder="$tc('sw-settings-salutation.detail.fieldSalutationKeyPlaceholder')"
                             :help-text="$tc('sw-settings-salutation.detail.fieldSalutationKeyTooltip')"
-                            :error="invalidKeyError"
+                            :error="salutationSalutationKeyError"
                             validation="required"
                             required
                             :disabled="!acl.can('salutation.editor')"
