NEXT-22260 - Clean save button icon should be improved

--- a/src/Administration/Resources/app/administration/src/app/component/base/sw-button-group/sw-button-group.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/base/sw-button-group/sw-button-group.scss
@@ -76,5 +76,9 @@
                 border-left: 1px solid rgba(0, 0, 0, 20%);
             }
         }
+
+        .icon--small-arrow-medium-down {
+            padding-bottom: 2px;
+        }
     }
 }
