NEXT-18116 - Use white color in sw-alert--system

--- a/src/Administration/Resources/app/administration/src/app/component/base/sw-alert/sw-alert.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/base/sw-alert/sw-alert.scss
@@ -262,6 +262,13 @@ $sw-alert-size-close: 40px;
                 }
             }
         }
+
+        .sw-alert__icon,
+        .sw-alert__close,
+        .sw-alert__title,
+        .sw-alert__message {
+            color: $color-white;
+        }
     }
 
     ul {
