--- a/src/Administration/Resources/app/administration/src/app/component/utils/sw-notifications/sw-notifications.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/utils/sw-notifications/sw-notifications.scss
@@ -18,40 +18,28 @@ $sw-notifications-transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
         width: 100%;
 
         &--info {
-            .sw-alert__title {
-                color: $color-darkgray-200;
-            }
-
+            .sw-alert__title,
             .sw-alert__message {
                 color: $color-darkgray-200;
             }
         }
 
         &--success {
-            .sw-alert__title {
-                color: $color-darkgray-200;
-            }
-
+            .sw-alert__title,
             .sw-alert__message {
                 color: $color-darkgray-200;
             }
         }
 
         &--error {
-            .sw-alert__title {
-                color: $color-darkgray-200;
-            }
-
+            .sw-alert__title,
             .sw-alert__message {
                 color: $color-darkgray-200;
             }
         }
 
         &--warning {
-            .sw-alert__title {
-                color: $color-darkgray-200;
-            }
-
+            .sw-alert__title,
             .sw-alert__message {
                 color: $color-darkgray-200;
             }
