NEXT-22433 - fix third level flyout

--- a/src/Administration/Resources/app/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.scss
@@ -51,6 +51,7 @@ $sw-admin-menu-active-text: $color-white;
         right: 16px;
         top: 21px;
         margin: 0;
+        padding: 0 !important;
     }
 
     .collapsible-text {
