NEXT-22604 - Sort countries by alphabetical order

--- a/src/Administration/Resources/app/administration/src/module/sw-settings-tax/component/sw-settings-tax-rule-modal/sw-settings-tax-rule-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-tax/component/sw-settings-tax-rule-modal/sw-settings-tax-rule-modal.html.twig
@@ -20,6 +20,7 @@
             :label="$tc('sw-settings-tax.taxRuleCard.labelCountryName')"
             :help-text="$tc('sw-settings-tax.taxRuleCard.tooltipCountries')"
             :error="taxRuleCountryIdError"
+            :criteria="countryCriteria"
             entity="country"
         />
         {% endblock %}
